--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Drew Franklin
 	<h1>Posts</h1>
 	<ul class="posts">
 		{% for post in site.posts %}
-		<li><span>{{ post.date | page.date | date: "%B %d %Y"  }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><span>{{ post.date | page.date | date: "%B %d, %Y"  }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
 		{% endfor %}
 	</ul>
 </div>
