--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Drew Franklin
+class: home
 ---
-<div id="main" class="home">
 	<div class="posts">
 		<h2><a href="/archive.html">Posts</a></h2>
 		{% for post in site.posts %}
@@ -14,4 +14,3 @@ title: Drew Franklin
 		</div>
 		{% endfor %}
 	</div>
-</div>
