Updates and Jquery removal

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ class: home
 			{% if post.show-description %}
 				{{ post.description }}
 			{{% elsif %}}
-				{{ content }}
+				{{ post.content }}
 			{% endif %}
 		</div>
 		{% endfor %}
