fixes updates and style tweaks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ class: home
 				</header>
 				{% if post.show-description %}
 					{{ post.description }}
-				{{% else %}}
+				{% else %}
 					{{ post.content }}
 				{% endif %}
 				<footer>
