--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ class: home
 		<article>
 			<div class="content">
 				<header>
-					<h1>{{ post.title }}</h1>
+					<h1><a href="{{post.url}}">{{ post.title }}</a></h1>
 				</header>
 				{% if post.show-description %}
 					{{ post.description }}
